shaku/tests/ui/component_missing_dependency.stderr
error[E0277]: the trait bound `TestModule: shaku::HasComponent<(dyn DependencyTrait + 'static)>` is not satisfied
  --> $DIR/component_missing_dependency.rs:22:1
   |
22 | / module! {
23 | |     TestModule {
24 | |         components = [ComponentImpl],
25 | |         providers = []
26 | |     }
27 | | }
   | |_^ the trait `shaku::HasComponent<(dyn DependencyTrait + 'static)>` is not implemented for `TestModule`
   |
   = help: the following implementations were found:
             <TestModule as shaku::HasComponent<<ComponentImpl as shaku::Component<TestModule>>::Interface>>
   = note: required because of the requirements on the impl of `shaku::Component<TestModule>` for `ComponentImpl`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `TestModule: shaku::HasComponent<(dyn DependencyTrait + 'static)>` is not satisfied
  --> $DIR/component_missing_dependency.rs:22:1
   |
22 | / module! {
23 | |     TestModule {
24 | |         components = [ComponentImpl],
25 | |         providers = []
26 | |     }
27 | | }
   | |_^ the trait `shaku::HasComponent<(dyn DependencyTrait + 'static)>` is not implemented for `TestModule`
   |
   = help: the following implementations were found:
             <TestModule as shaku::HasComponent<<ComponentImpl as shaku::Component<TestModule>>::Interface>>
   = note: required because of the requirements on the impl of `shaku::Component<TestModule>` for `ComponentImpl`
   = note: required because it appears within the type `TestModule`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
